@@ -1,3 +1,5 @@
+2017-07-28 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
+    Added syslog messages 
 2017-07-27 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
     Changed src directory to server directory 
 2017-07-27 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
